# ws_servers_metrics

./: .gitignore  README.md  compose.yaml
go_ws_app/: Dockerfile  README.md  go.mod
go_ws_app/cmd/api/: app.go  chat.go  client.go  handlers.go  main.go  routes.go
golang_ws_app/: Dockerfile  LICENSE  README.md  go.mod  go.sum
golang_ws_app/cmd/api/: app.go  config.go  main.go  ws.go
golang_ws_app/cmd/proxy/: config.go  handlers.go  main.go  upstream.go
golang_ws_app/internal/chat/: chat.go  user.go
golang_ws_app/internal/gopool/: pool.go
golang_ws_app/internal/metrics/: metrics.go
golang_ws_app/internal/models/: types.go
grafana/: Dockerfile  dashboard.json  datasources.yml  default.yaml  grafana.ini
k6/scripts/: both.js  go.js  python.js  python_script.js  rust.js  rust_script.js  script.js
prometheus/: prometheus.yml
python_lib_ws_app/: pyproject.toml
python_lib_ws_app/python_lib_ws_app/: app.py
python_ws_app/: Dockerfile  pyproject.toml
python_ws_app/app/: app.py  handlers.py  metrics.py  models.py  routes.py
results/: RESULTS.md
rust_ws_app/: Cargo.toml  Dockerfile  Makefile
rust_ws_app/src/: chat.rs  handlers.rs  main.rs  metrics.rs  models.rs  routes.rs
