[tool.poetry]
name = "python-lib-ws-app"
version = "0.1.0"
description = ""
authors = ["Vadim Gorbachev <vadim.gorbachev.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
pydantic = "^2.7.0"
uvloop = "^0.19.0"
orjson = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
