[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vadim Gorbachev <vadim.gorbachev.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.0"
orjson = "^3.9.7"
tornado = "^6.0.4"
uvloop = "^0.17.0"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
