[package]
name = "rust_ws_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
rocket_ws = "0.1"
rocket_prometheus = "0.10"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
